Fix code block scrollbar issue by changing overflow to auto

--- a/_sass/_syntax_highlighting.sass
+++ b/_sass/_syntax_highlighting.sass
@@ -6,7 +6,7 @@ figure.code
   font-size: 0.9em
   font-family: "SourceCodePro-Regular", Monaco, "Courier New", monospace
   border-radius: 5px
-  overflow: scroll
+  overflow: auto
   margin: 1em 0
   padding: 0
 
